# zones

./: LICENSE  README.md  zones.cabal
app/: Main.hs
src/: Lib.hs
test/: Spec.hs  SpecHelper.hs
