name:                zones
version:             0.2.1.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/zones#readme
license:             MIT
license-file:        LICENSE
author:              Dmitry Mozzherin
maintainer:          dmozzherin@gmail.com
copyright:           Dmitry Mozzherin
category:            Command line
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.22.5

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , containers >= 0.5 && < 1
  default-language:    Haskell2010

executable zones
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , zones
  default-language:    Haskell2010

test-suite zones-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , zones
                     , hspec
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  other-modules:       SpecHelper
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/dimus/zones
